namespaces/live.cloud-platform.service.justice.gov.uk/dave-learning/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dave-learning
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Platforms"
    cloud-platform.justice.gov.uk/slack-channel: "modernisation-platform"
    cloud-platform.justice.gov.uk/application: "dave-learning"
    cloud-platform.justice.gov.uk/owner: "Modernisation Platform: david.elliott@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/davidkelliott/training"
    cloud-platform.justice.gov.uk/team-name: "modernisation-platform-engineers"
    cloud-platform.justice.gov.uk/review-after: "2023-09-05"
